src/objects/POIType__c.object
<CustomObject>
    <fields>
        <fullName>AttachmentId__c</fullName>
        <label>AttachmentId</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasWeightage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HasWeightage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Weightage__c</fullName>
        <label>Weightage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>POIType</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>POIType Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>POIType</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>